<resources>
    <string name="app_name">One Piece</string>
    <string name="_10_10">10 : 10</string>
    <string name="desc">desc</string>
    <string name="textview">TextView</string>
    <string name="about">About</string>
    <string name="card_view">Card View</string>
    <string name="favorite">Detail</string>
    <string name="share">Share</string>
    <string name="list_view">List View</string>
    <string name="ade_fathi_amirrasyid">Ade Fathi Amirrasyid</string>
    <string name="adefathi_amirrasyid11_gmail_com">adefathi.amirrasyid11@gmail.com</string>
    <string name="about_one_piece">About One Piece</string>
</resources>